--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,170 +1,1 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Archivo';
-  list-style: none;
-  text-decoration: none; }
-
-html {
-  scroll-behavior: smooth;
-  font-size: 62.5%; }
-
-body {
-  overflow-x: hidden;
-  background: #040405;
-  color: #ffffff; }
-
-section {
-  width: 100%;
-  height: auto;
-  padding: 120px 12% 100px; }
-
-span {
-  color: #FF3A5E; }
-
-/*----------------Selection Text Section----------------*/
-::selection {
-  background: #FF3A5E;
-  color: #040405; }
-
-/*----------------Scrollbar Design----------------*/
-::-webkit-scrollbar {
-  width: 2px; }
-
-::-webkit-scrollbar-thumb {
-  background: #FF3A5E;
-  border-radius: 30px; }
-
-::-webkit-scrollbar-track {
-  background: #040405; }
-
-header {
-  position: fixed;
-  width: 100%;
-  padding: 0 12% 0;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-  background: #040405;
-  border-bottom: 1px solid transparent; }
-
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 100px; }
-  nav .logo img {
-    width: 200px;
-    height: 34px;
-    margin-top: 6px; }
-  nav .nav-bar {
-    display: flex; }
-    nav .nav-bar li {
-      margin-left: 40px; }
-    nav .nav-bar li a {
-      position: relative;
-      font-size: 19px;
-      font-weight: 600;
-      color: #BFBFBF; }
-      nav .nav-bar li a::before {
-        content: attr(data-text);
-        position: absolute;
-        width: 0;
-        overflow: hidden;
-        transition: all .45s ease; }
-      nav .nav-bar li a:hover::before {
-        width: 100%;
-        color: #FF3A5E; }
-  nav .mobile-menu i {
-    display: none;
-    position: relative;
-    color: #ffffff;
-    font-size: 45px; }
-
-.home .home-container {
-  margin-top: 130px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center; }
-.home .logo-od {
-  position: absolute;
-  right: -50px;
-  top: 50%;
-  transform: translate(27%, -54%); }
-.home .buttons {
-  margin: 50px 0; }
-  .home .buttons a {
-    padding: 15px 30px;
-    margin-right: 30px;
-    font-size: 18px;
-    color: #ffffff;
-    border-radius: 30px;
-    box-shadow: 0px 3px 1px #FF3A5E;
-    transition: all .45s ease; }
-    .home .buttons a:hover {
-      background: #FF3A5E; }
-
-.home-text {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start; }
-  .home-text h1 {
-    font-size: 4rem;
-    font-weight: 700;
-    line-height: 1.4;
-    color: #ffffff; }
-  .home-text p {
-    font-size: 2rem;
-    line-height: 1.8;
-    color: #ffffff;
-    margin: 40px 0px 0; }
-  .home-text p:nth-child(3) {
-    font-size: 1.8rem;
-    letter-spacing: 1px;
-    margin: 15px 0px 0; }
-
-.about .about-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  background: #09090b;
-  padding: 40px 0;
-  border: 2px solid #101013; }
-  .about .about-container .about-img {
-    text-align: center; }
-    .about .about-container .about-img img {
-      margin-top: 30px;
-      height: 600px; }
-  .about .about-container .about-text {
-    margin: 80px 20px 0 0; }
-    .about .about-container .about-text h2 {
-      font-size: 4rem;
-      font-weight: 700;
-      letter-spacing: 1px;
-      margin: 10px 0; }
-    .about .about-container .about-text h4 {
-      font-size: 2rem;
-      font-weight: 500; }
-    .about .about-container .about-text h3 {
-      font-size: 2rem;
-      font-weight: 700;
-      letter-spacing: 1px;
-      margin: 10px 0; }
-    .about .about-container .about-text p {
-      font-size: 1.8rem;
-      line-height: 1.6;
-      margin-top: 30px; }
-  .about .about-container .contact-icons {
-    margin-top: 50px; }
-    .about .about-container .contact-icons a {
-      padding: 20px;
-      border: 2px solid #101013;
-      border-radius: 12px;
-      font-size: 3.2rem;
-      margin-right: 15px;
-      color: #FF3A5E;
-      transition: all .55s ease-in-out; }
-      .about .about-container .contact-icons a:hover {
-        border: 2px solid #FF3A5E; }
-
-/*# sourceMappingURL=style.css.map */
+*{margin:0;padding:0;box-sizing:border-box;font-family:"Archivo";list-style:none;text-decoration:none}html{scroll-behavior:smooth;font-size:62.5%}body{overflow-x:hidden;background:#040405;color:#fff}section{width:100%;height:auto;padding:120px 12% 100px}span{color:#ff3a5e}::selection{background:#ff3a5e;color:#040405}::-webkit-scrollbar{width:2px}::-webkit-scrollbar-thumb{background:#ff3a5e;border-radius:30px}::-webkit-scrollbar-track{background:#040405}header{position:fixed;width:100%;padding:0 12% 0;top:0;left:0;z-index:1000;background:#040405;border-bottom:1px solid rgba(0,0,0,0)}nav{display:flex;justify-content:space-between;align-items:center;height:100px}nav .logo img{width:200px;height:34px;margin-top:6px}nav .nav-bar{display:flex}nav .nav-bar li{margin-left:40px}nav .nav-bar li a{position:relative;font-size:19px;font-weight:600;color:#bfbfbf}nav .nav-bar li a::before{content:attr(data-text);position:absolute;width:0;overflow:hidden;transition:all .45s ease}nav .nav-bar li a:hover::before{width:100%;color:#ff3a5e}nav .mobile-menu i{display:none;position:relative;color:#fff;font-size:45px}.home .home-container{margin-top:130px;display:flex;justify-content:flex-start;align-items:center}.home .logo-od{position:absolute;right:-50px;top:50%;transform:translate(27%, -54%)}.home .buttons{margin:50px 0}.home .buttons a{padding:15px 30px;margin-right:30px;font-size:18px;color:#fff;border-radius:30px;box-shadow:0px 3px 1px #ff3a5e;transition:all .45s ease}.home .buttons a:hover{background:#ff3a5e}.home-text{display:flex;flex-direction:column;justify-content:flex-start}.home-text h1{font-size:4rem;font-weight:700;line-height:1.4;color:#fff}.home-text p{font-size:2rem;line-height:1.8;color:#fff;margin:40px 0px 0}.home-text p:nth-child(3){font-size:1.8rem;letter-spacing:1px;margin:15px 0px 0}.about .about-container{display:grid;grid-template-columns:repeat(2, 1fr);background:#09090b;border:2px solid #101013}.about .about-container .about-img{text-align:center}.about .about-container .about-img img{margin-top:30px;height:600px}.about .about-container .about-text{margin:80px 20px 0 0}.about .about-container .about-text h2{font-size:4rem;font-weight:700;letter-spacing:1px;margin:10px 0}.about .about-container .about-text h4{font-size:2rem;font-weight:500}.about .about-container .about-text h3{font-size:2rem;font-weight:700;letter-spacing:1px;margin:10px 0}.about .about-container .about-text p{font-size:1.8rem;line-height:1.6;margin-top:30px}.about .about-container .contact-icons{margin-top:50px}.about .about-container .contact-icons a{padding:20px;border:2px solid #101013;border-radius:12px;font-size:3.2rem;margin-right:15px;color:#ff3a5e;transition:all .55s ease-in-out}.about .about-container .contact-icons a:hover{border:2px solid #ff3a5e}/*# sourceMappingURL=style.css.map */
