--- a/assets/sass/_about.scss
+++ b/assets/sass/_about.scss
@@ -15,7 +15,7 @@
         }
 
         .about-text{
-            margin: 80px 20px 0 0;
+            margin: 40px 30px 0 0;
 
             h2{
                 font-size: $h2-font;
@@ -44,9 +44,10 @@
         }
 
         .contact-icons{
-            margin-top: 50px;
+            margin-top: 70px;
 
             a{
+                background-color: $dark-color;
                 padding: 20px;
                 border: 2px solid $dark-400-color;
                 border-radius: 12px;
