--- a/assets/sass/_home.scss
+++ b/assets/sass/_home.scss
@@ -10,7 +10,12 @@
         position: absolute;
         right: -50px;
         top: 50%;
-        transform: translate(27%, -54%);
+        transform: translate(32%, -43%);
+
+        img{
+            width: 848px;
+            height: 877px;
+        }
     }
 
     .buttons{
