--- a/assets/sass/_skills.scss
+++ b/assets/sass/_skills.scss
@@ -3,6 +3,7 @@
 
     .skills-container{
         text-align: center;
+        padding-bottom: 3rem;
 
         h2{
             font-size: $h2-font;
