--- a/assets/sass/_services.scss
+++ b/assets/sass/_services.scss
@@ -30,7 +30,7 @@
     }
     
     .service-box{
-        width: 30%;
+        width: 393px;
         background: $dark-200-color;
         padding: 35px 45px;
         border: 1px solid $dark-400-color;
