--- a/assets/sass/_contact.scss
+++ b/assets/sass/_contact.scss
@@ -6,17 +6,17 @@
 
     h4{ 
     margin: 18px 0;
-    font-size: $h4-font;
+    font-size: $h4-desktop;
     }
     
     h2{
-        font-size: $h2-font;
+        font-size: $h2-desktop;
         line-height: 1;
     }
     
     p{
         color: $grey-color;
-        font-size: $p-font;
+        font-size: $p-desktop;
         line-height: 1.8;
         margin-bottom: 30px;
     }
