--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -5,9 +5,27 @@ $dark-color: #040405;
 $dark-200-color: #09090b;
 $dark-400-color: #101013;
 
-$h1-font: 4rem;
-$h2-font: 4rem;
-$h3-font: 2rem;
-$h4-font: 2rem;
-$p-font: 2rem;
+$h1-desktop: 4rem;
+$h2-desktop: 4rem;
+$h3-desktop: 2rem;
+$h4-desktop: 2rem;
+$p-desktop: 2rem;
+
+$h1-tablet: 3rem;
+$h2-tablet: 2.5rem;
+$h3-tablet: 1.7rem;
+$h4-tablet: 1.4rem;
+$p-tablet: 1.6rem;
+
+$h1-mobile: 2.5rem;
+$h2-mobile: 2rem;
+$h3-mobile: 1.5rem;
+$h4-mobile: 1.2rem;
+$p-mobile: 1.4rem;
+
+
+$tablet: 1024px;
+$mobile: 600px;
+
+
 
