--- a/assets/sass/_skills.scss
+++ b/assets/sass/_skills.scss
@@ -6,7 +6,7 @@
         padding-bottom: 5rem;
 
         h2{
-            font-size: $h2-font;
+            font-size: $h2-desktop;
             font-weight: 700;
             letter-spacing: 1px;
             margin-bottom: 10rem;
