--- a/assets/sass/_about.scss
+++ b/assets/sass/_about.scss
@@ -18,19 +18,19 @@
             margin: 40px 30px 0 0;
 
             h2{
-                font-size: $h2-font;
+                font-size: var(--h2-font);
                 font-weight: 700;
                 letter-spacing: 1px;
                 margin: 10px 0;
             }
 
             h4{
-                font-size: $h4-font;
+                font-size: var(--h4-font);
                 font-weight: 500;
             }
 
             h3{
-                font-size: $h3-font;
+                font-size: var(--h3-font);
                 font-weight: 700;
                 letter-spacing: 1px;
                 margin: 10px 0;
