--- a/assets/sass/_services.scss
+++ b/assets/sass/_services.scss
@@ -5,7 +5,7 @@
         text-align: center;
         
         h4{
-        color: $h4-font;
+        color: var(--h4-font);
         font-size: 20px;
         margin-bottom: 15px;
         margin-top: 20px;
@@ -13,7 +13,7 @@
         
         h2{
         margin-top: 15px;
-        font-size: $h2-font;
+        font-size: var(--h2-font);
         font-weight: 700;
         letter-spacing: 1px;
         line-height: 1;
@@ -44,7 +44,7 @@
         }
     
         p{
-            font-size: $p-font;
+            font-size: var(--p-font);
             line-height: 1.8;
             margin-bottom: 25px;
         }
