--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -30,7 +30,7 @@ nav{
             
             a{
             position: relative;
-            font-size: 19px;
+            font-size: var(--p-font);
             font-weight: 600;
             color: $grey-color;
     
