--- a/assets/sass/_responsive.scss
+++ b/assets/sass/_responsive.scss
@@ -19,41 +19,73 @@
             }
         }
     }
-    .about{
-            .about-text p{
-                margin: 20px 0 40px 0;
-            }
-        
-            .about-container .social-icons a{ 
-            font-size: 2.5rem;
-            padding: 15px;
-        } 
-    }    
 }
 
 @media (max-width: 1100px){
     :root{
-        --h1-font: 3.3rem;
-        --h2-font: 3.3rem;
-        --h3-font: 1.8rem;
-        --h4-font: 1.8rem;
-        --p-font: 1.8rem;
+        --h1-font: 3.2rem;
+        --h2-font: 3.2rem;
+        --h3-font: 1.7rem;
+        --h4-font: 1.7rem;
+        --p-font: 1.7rem;
     }
 
-   header{
-       nav{
-           .nav-bar{
-               display: none;
-           }
-       }
-
-       .mobile-menu i{
-        display: block;
-       }
-
-   }
+   .about{
+    .about-container{
+        .about-text p{
+                margin: 20px 0 20px 0;
+            }
+    
+            .social-icons a{ 
+            font-size: 2.5rem;
+            padding: 15px;
+            } 
+        } 
+    }    
 }
 
-@media (max-width: 920px){
+@media (max-width: 940px){
+    header{
+        nav{
+            .nav-bar{
+                display: none;
+            }
+        }
+ 
+        .mobile-menu i{
+         display: block;
+        }
+    }
 
+    .home{
+        .home-container{
+            justify-content: center;
+        }
+
+        .home-text{
+            margin-right: 0;
+        }
+
+        .logo-od{
+            display: none;
+        }
+    }
+    
+    .about{
+        .about-container{
+            grid-template-columns: repeat(1,1fr);
+            
+            .about-text{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                margin: 30px 20px;
+            }
+        }
+    }
+}
+
+@media (max-width: 720px){
+    
 }
