--- a/assets/sass/_contact.scss
+++ b/assets/sass/_contact.scss
@@ -1,7 +1,6 @@
 .contact{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 2.5rem;
 
     h4{ 
