--- a/assets/sass/_responsive.scss
+++ b/assets/sass/_responsive.scss
@@ -99,5 +99,9 @@
         .home-container{
             text-align: center;
         }
+
+        .buttons{
+            flex-direction: column;
+        }
     }
 }
