--- a/assets/sass/_about.scss
+++ b/assets/sass/_about.scss
@@ -43,7 +43,7 @@
         p{
             font-size: 1.8rem;
             line-height: 1.6;
-            margin: 20px 0 45px 0;
+            margin-top: 20px;
         }
     }
     
@@ -55,7 +55,7 @@
                 border: 2px solid $dark-400-color;
                 border-radius: 12px;
                 font-size: 3.2rem;
-                margin-right: 15px;
+                margin: 45px 15px 0 0;
                 color: $primary-color;
                 transition: all .55s ease-in-out;
                 
