--- a/assets/sass/_home.scss
+++ b/assets/sass/_home.scss
@@ -1,19 +1,22 @@
 .home{
     .home-container{
-        margin-top: 130px;
+        margin-top: 110px;
         display: flex;
+        flex-direction: column;
         justify-content: flex-start;
-        align-items: center;
+        align-items: flex-start;
     }
 
     .logo-od{
         position: absolute;
         right: -50px;
         top: 50%;
-        transform: translate(-13%, -52%);
+        transform: translate(-13%, -45%);
     }
 
     .buttons{
+        display: flex;
+        flex-wrap: wrap;
         margin: 50px 0;
 
         a{
