--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -22,40 +22,41 @@ nav{
         margin-top: 6px;
     }
 
-    .nav-bar{
+    .navbar{
         display: flex;
   
-        li{
-            margin-left: 40px;
-            
-            a{
-            position: relative;
-            font-size: var(--p-font);
-            font-weight: 600;
-            color: $grey-color;
+            li{
+                margin-left: 40px;
+                
+                a{
+                position: relative;
+                font-size: var(--p-font);
+                font-weight: 600;
+                color: $grey-color;
     
-            &::before{
-                content: attr(data-text);
-                position: absolute;
-                width: 0;
-                overflow: hidden;
-                transition: all .45s ease;
-            }
+                &::before{
+                    content: attr(data-text);
+                    position: absolute;
+                    width: 0;
+                    overflow: hidden;
+                    transition: all .45s ease;
+                }
     
-            &:hover::before{
-                width: 100%;
-                color: $primary-color;
+                &:hover::before{
+                    width: 100%;
+                    color: $primary-color;
+                }
             }
-        }
         }
 
         
     }
 
-    .mobile-menu i{
+    .mobile-menu{
         display: none;
         position: relative;
         color: $white-color;
+        z-index: 1001;
         font-size: 45px;
     }
 }
