--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -52,7 +52,7 @@ nav{
         
     }
 
-    .mobile-menu{
+    #mobile-menu{
         display: none;
         position: relative;
         color: $white-color;
