--- a/assets/sass/_responsive.scss
+++ b/assets/sass/_responsive.scss
@@ -72,7 +72,7 @@
                 top: 100%;
             }
   
-            .mobile-menu{
+            #mobile-menu{
              display: block;
             }
         }
