--- a/assets/sass/_responsive.scss
+++ b/assets/sass/_responsive.scss
@@ -112,6 +112,9 @@
         --h4-font: 1.6rem;
         --p-font: 1.6rem;
     }
+    section{
+        padding-top: 20px;
+    }
 
     .home{
         .buttons{
@@ -134,9 +137,8 @@
         object-fit: cover;    
     }
 
-    footer{
-        .top{
-            display: none;
-        }
+    .projects .project-container .card-box .p-img img{
+        width: 342px;
+        object-fit: cover;
     }
 }
