--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,4 +1,4 @@
-@import "./bootstrap.scss";
+@import "./resets.scss";
 @import "./variables.scss";
 @import "./header.scss";
 @import "./home.scss";
