--- a/assets/sass/_home.scss
+++ b/assets/sass/_home.scss
@@ -15,21 +15,20 @@
     }
 
     .buttons{
-        display: flex;
-        flex-wrap: wrap;
         margin: 50px 0;
 
         a{
             padding: 15px 30px;
-            margin-right: 30px;
             font-size: 18px;
+            background: $primary-color;
             color: $white-color;
+            border: 1px solid transparent;
             border-radius: 30px;
-            box-shadow: 0px 3px 1px $primary-color;
-            transition: all .45s ease;
-       
+            transition: all .35s ease;
+            
             &:hover{
-                background: $primary-color;
+                background: transparent;
+                border: 1px solid #ff3a5e;
             }
         }
     }
